.provarCaches/00D5f000005vwGkEAI/objects/rstk__porrtvdtl__c.object
<CustomObject>
    <description>porrtvdtl__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__porrtvdtl_ordno__c &amp; &apos;_&apos; &amp;  TEXT(rstk__porrtvdtl_oper__c) &amp; &apos;_&apos; &amp;  TEXT(rstk__porrtvdtl_rcptno__c) &amp; &apos;_&apos; &amp;   TEXT(rstk__porrtvdtl_lne__c ) &amp; &apos;_&apos; &amp;  TEXT(rstk__porrtvdtl_seqno__c )</formula>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Division associated with the returned Item</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divporrtvdtls</relationshipLabel>
        <relationshipName>divporrtvdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_lne__c</fullName>
        <inlineHelpText>This is the PO Line for Item being Returned to Vendor</inlineHelpText>
        <label>LNE</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_locid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Location Id associated with the returned Item</inlineHelpText>
        <label>locid</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>PO RTV</relationshipLabel>
        <relationshipName>PO_RTV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_locnum__c</fullName>
        <inlineHelpText>This is the Location Number associated with the returned Item</inlineHelpText>
        <label>locnum</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_locsec__c</fullName>
        <inlineHelpText>This is the Location Section associated with the returned Item</inlineHelpText>
        <label>locsec</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_loctype__c</fullName>
        <inlineHelpText>This is the Location Type  associated with the returned Item</inlineHelpText>
        <label>loctype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Non-nettable</fullName>
                </value>
                <value>
                    <fullName>On Hand</fullName>
                </value>
                <value>
                    <fullName>Outside Operation</fullName>
                </value>
                <value>
                    <fullName>Vendor Managed Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_oper__c</fullName>
        <inlineHelpText>RTV Operation detail</inlineHelpText>
        <label>OPER</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_ordno__c</fullName>
        <inlineHelpText>This is the Purchase Order Number for the Item being returned</inlineHelpText>
        <label>ORDNO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_qtyrtv__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Quantity returned to Vendor</inlineHelpText>
        <label>QTYRTV</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_rcptno__c</fullName>
        <inlineHelpText>This is the Receipt Number for the Item being returned</inlineHelpText>
        <label>RCPTNO</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_rtvreason__c</fullName>
        <inlineHelpText>This is the reason for this RTV</inlineHelpText>
        <label>RTVREASON</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_seqno__c</fullName>
        <inlineHelpText>RTV Sequence number</inlineHelpText>
        <label>SEQNO</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Site associated with the returned Item</inlineHelpText>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>porrtvdtls</relationshipLabel>
        <relationshipName>porrtvdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_srlno__c</fullName>
        <inlineHelpText>This is the Serial Number of Item being Returned to Vendor</inlineHelpText>
        <label>SRLNO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_txnsubid__c</fullName>
        <inlineHelpText>RTV Transaction Sub-ID</inlineHelpText>
        <label>TXNSUBID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_ucstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Labor Cost of the Item</inlineHelpText>
        <label>UCSTLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_ucstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Material Cost of the Item</inlineHelpText>
        <label>UCSTMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_ucstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Overhead Fringe Cost of the Item</inlineHelpText>
        <label>UCSTOHDFRNG</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_ucstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Overhead Labor Cost of the Item</inlineHelpText>
        <label>UCSTOHDLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_ucstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Machine Cost of the Item</inlineHelpText>
        <label>UCSTOHDMACH</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_ucstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Overhead Material Cost of the Item</inlineHelpText>
        <label>UCSTOHDMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_ucstslsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Single Level Subcontracted labor Cost of the Item</inlineHelpText>
        <label>UCSTSLSUBLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_ucstslsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Single Level Subcontracted Material Cost of the Item</inlineHelpText>
        <label>UCSTSLSUBMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_ucstslsubohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Single Level Subcontracted Overhead Material Cost of the Item</inlineHelpText>
        <label>UCSTSLSUBOHDMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_ucstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Cumulative Subcontracted labor Cost of the Item</inlineHelpText>
        <label>UCSTSUBLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porrtvdtl_ucstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Cumulative Subcontracted Material Cost of the Item</inlineHelpText>
        <label>UCSTSUBMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO RTV</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PORRTVDTL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO RTV</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>